Fixed afterhours image on mobile

--- a/less/afterhours.less
+++ b/less/afterhours.less
@@ -4,6 +4,7 @@
 
 .right-img {
 	float:right;
-	max-width:335px;
+	width:335px;
+	max-width:100%;
 	margin: 10px;
 }
